Fix word wrap on window resizing

--- a/src/styles/blocks/explore-online.scss
+++ b/src/styles/blocks/explore-online.scss
@@ -30,6 +30,9 @@
     font-size: 24px;
     line-height: 140%;
     font-weight: 700;
+    margin-left: -100%;
+    margin-right: -100%;
+    white-space: nowrap;
     text-align: center;
     color: $accent-color;
   }
